-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.1
-
-
2ffa125c2 (dev), e63c51c7d (6.6), 84f9dfa7f (6.5), e10a078e8 (108-based), fc41826cb (6.5), 9ea0c1e94 (dev), cff40bb7a (6.6)
Building at least with -sanitize undefined fails when building cocoa plugin with:
Undefined symbols for architecture x86_64: "typeinfo for QSessionManagerPrivate", referenced from: l___unnamed_26 in qcocoasessionmanager.cpp.o l___unnamed_18 in qcocoasessionmanager.cpp.o